--- a/next.htm
+++ b/next.htm
@@ -14,6 +14,7 @@
         <ul>
           <li><a href="intro.htm" title="Introduction to HTML">Introduction to HTML</a></li>
           <li><a href="syntax.htm" title="HTML syntax">HTML syntax</a></li>
+          <li><a href="structure.htm" title="Structuring pages">Structuring pages</a></li>
           <li><a href="links.htm" title="Creating links">Creating links</a></li>
           <li><a href="reference.htm" title="HTML Reference">HTML reference</a></li>
           <li><a href="next.htm" title="Next steps">Next steps</a></li>
@@ -54,9 +55,12 @@
           <p>One of the best online resources for web designers and developers. Great collection of articles, tutorials, and references.</p>
           <strong><p>HTML5 Rocks</strong> </p>
           <p>Once you&rsquo;ve got the basics down, check out sites like HTML5 Rocks. This site feature articles, tutorials, and other resources that help you keep up with the evolving web. </p>
-          <p>&copy; lynda.com | follow me and lynda.com on Twitter! @jameswillweb @lyndadotcom</p>
         </section>
       </article>
     </main>
+
+    <footer>
+      <p>&copy; <a href="http://www.lynda.com" title="lynda.com" target="_blank">lynda.com</a> | follow me and lynda.com on Twitter! <a href="https://twitter.com/jameswillweb" title="Follow me on Twitter">@jameswillweb</a> <a href="https://twitter.com/lynda" title="Follow lynda.com on Twitter">@lyndadotcom</a></p>
+    </footer>
   </body>
 </html>
