--- a/reference.htm
+++ b/reference.htm
@@ -14,6 +14,7 @@
         <ul>
           <li><a href="intro.htm" title="Introduction to HTML">Introduction to HTML</a></li>
           <li><a href="syntax.htm" title="HTML syntax">HTML syntax</a></li>
+          <li><a href="structure.htm" title="Structuring pages">Structuring pages</a></li>
           <li><a href="links.htm" title="Creating links">Creating links</a></li>
           <li><a href="reference.htm" title="HTML Reference">HTML reference</a></li>
           <li><a href="next.htm" title="Next steps">Next steps</a></li>
@@ -75,7 +76,7 @@
         <section>
             <table border="1" cellspacing="0" cellpadding="0" summary="A quick reference of named character entities, including an example of the character, a description, and the entity code.">
             <caption>
-              <h3>Common Named Character Entities </h3>
+              <h3 id="named">Common Named Character Entities </h3>
             </caption>
             <tr>
               <th scope="col">Character </th>
@@ -173,7 +174,7 @@
     </main>
 
     <footer>
-      <p>&copy; lynda.com | follow me and lynda.com on Twitter! @jameswillweb @lyndadotcom</p>
+      <p>&copy; <a href="http://www.lynda.com" title="lynda.com" target="_blank">lynda.com</a> | follow me and lynda.com on Twitter! <a href="https://twitter.com/jameswillweb" title="Follow me on Twitter">@jameswillweb</a> <a href="https://twitter.com/lynda" title="Follow lynda.com on Twitter">@lyndadotcom</a></p>
     </footer>
   </body>
 </html>
