--- a/reference.htm
+++ b/reference.htm
@@ -13,13 +13,13 @@
       <nav>
         <ul>
           <li><a href="intro.htm" title="Introduction to HTML">Introduction to HTML</a></li>
+          <li><a href="links.htm" title="Creating links">Creating links</a></li>
+          <li><a href="next.htm" title="Next steps">Next steps</a></li>
+          <li><a href="reference.htm" title="HTML Reference">HTML reference</a></li>
           <li><a href="syntax.htm" title="HTML syntax">HTML syntax</a></li>
           <li><a href="structure.htm" title="Structuring pages">Structuring pages</a></li>
-          <li><a href="links.htm" title="Creating links">Creating links</a></li>
-          <li><a href="reference.htm" title="HTML Reference">HTML reference</a></li>
-          <li><a href="next.htm" title="Next steps">Next steps</a></li>
         </ul>
-      </nav>
+      <nav>
       <p>On this page you&rsquo;ll find a quick reference to common HTML terms and a table of frequently used <a href="#named">named character entities</a>.</p>
     </header>
 
