--- a/structure.htm
+++ b/structure.htm
@@ -11,14 +11,16 @@
     <header>
       <h1>HTML Essential Training</h1>
       <h2>Structuring Pages</h2>
-      <ul>
-        <li><a href="intro.htm" title="Introduction to HTML">Introduction to HTML</a></li>
-        <li><a href="syntax.htm" title="HTML syntax">HTML syntax</a></li>
-        <li><a href="structure.htm" title="Structuring pages">Structuring pages</a></li>
-        <li><a href="links.htm" title="Creating links">Creating links</a></li>
-        <li><a href="reference.htm" title="HTML Reference">HTML reference</a></li>
-        <li><a href="next.htm" title="Next steps">Next steps</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="intro.htm" title="Introduction to HTML">Introduction to HTML</a></li>
+          <li><a href="links.htm" title="Creating links">Creating links</a></li>
+          <li><a href="next.htm" title="Next steps">Next steps</a></li>
+          <li><a href="reference.htm" title="HTML Reference">HTML reference</a></li>
+          <li><a href="syntax.htm" title="HTML syntax">HTML syntax</a></li>
+          <li><a href="structure.htm" title="Structuring pages">Structuring pages</a></li>
+        </ul>
+      <nav>
     </header>
 
     <main>
